--- a/public/documentation.html
+++ b/public/documentation.html
@@ -4,21 +4,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Documentation</title>
 </head>
 <body>
     <h1> Information: </h1>
-    <ul>
-        <li>Return a list of ALL movies to the user</li>
-        <li>Return data (description, genre, director, image URL, whether it’s featured or not) about a single movie by
-            title to the user</li>
-        <li>Return data about a genre (description) by name/title (e.g., “Thriller”)</li>
-        <li>Return data about a director (bio, birth year, death year) by name</li>
-        <li>Allow new users to register</li>
-        <li>Allow users to update their user info (username, password, email, date of birth)</li>
-        <li>Allow users to add a movie to their list of favorites</li>
-        <li>Allow users to remove a movie from their list of favorites</li>
-        <li>Allow existing users to deregister</li>
-    </ul>
+    <div class="body-wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <th> <b> Request </b> </th>
+                    <th><b> URL </b></th>
+                    <th><b> HTTP Method </b></th>
+                    <th><b> Request Data Format </b></th>
+                    <th><b> Response Data Format </b></th>
+                    </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td> List of Movies </td>
+                    <td> /movies </td>
+                    <td> GET </td>
+                    <td> None </td>
+                    <td> A JSON object holding data about all the movies </td>
+                </tr>
+                <tr> 
+                    <td> Data about a single movie by title to the user</td>
+                    <td> /movies/:title </td>
+                    <td> GET </td>
+                    <td> None </td>
+                    <td>  A JSON object holding data about a single movie </td>
+                </tr>
+                <tr>
+                    <td> Data about a genre by name/title (e.g., “Thriller”) </td>
+                    <td> /movies/:genre </td>
+                    <td> GET </td>
+                    <td> None </td>
+                    <td> A JSON object holding data about all genres: <br>
+                    Example: {<br> "name" : "Thriller" <br> } </td>
+                </tr>
+                <tr>
+                    <td> Data about a director by name </td>
+                    <td> /directors/:name </td>
+                    <td> GET </td>
+                    <td> Specify director's first name or last name in url</td>
+                    <td> A JSON object holding data about a director.</td>
+                </tr>
+                <tr>
+                    <td> Allow new users to register </td>
+                    <td> /users </td>
+                    <td> POST </td>
+                    <td> A JSON object holding data about the user to add <br> 
+                    Examole: { <br> "name" : " User1" <br> 
+                                    "Password" : <br> 
+                                    "Email" : "user1@hotmail.com" <br>
+                             }
+                    </td>
+                    <td> A JSON object holding data
+                        about the users that was
+                        added, including an ID:
+                        {
+                        "id" : 1
+                        "name" : "user2", <br>
+                        "Password" : <br>
+                        "Email" : " user1@hotmail.com" <br>
+                        }
+                    </td>
+                </tr>
+                <tr>
+                    <td> Allow users to update their user info (username) </td>
+                    <td> /users/:name </td>
+                    <td> PUT</td>
+                    <td> None</td>
+                    <td> A text message for successfully updated </td>
+                </tr>
+                <tr>
+                    <td> Allow users to add a movie to their list of favorites</td>
+                    <td> /users/:Name/movies/:MovieID </td>
+                    <td> POST </td>
+                    <td> userID added movie as a favourite: movie/[id] gives id to the movie to be added </td>
+                    <td> A text message whether the movie added successfully as favourite or not </td>
+                </tr>
+                <tr>
+                    <td> Allow users to remove a movie from their list of favorites </td>
+                    <td> /users/:Name/movies/:MovieID </td>
+                    <td> DELETE </td>
+                    <td> userID deleted movie as a favourite: movie/[id] gives id to the movie to be deleted </td>
+                    <td> A text message whether the movie deleted successfully as favourite or not </td>
+                </tr>
+                <tr>
+                    <td> Allow existing users to deregister </td>
+                    <td> /users/:name </td>
+                    <td> DELETE </td>
+                    <td> Remove user from data</td>
+                    <td> A text message for successfully removed </td>
+                </tr>
+
+            </tbody>
+        </table>
+    </div>
+
 </body>
 </html>
